[package]
name = "ndev"
version = "0.1.0"
description = "neuroevolution library"
homepage = "https://github.com/mateodavi/ndev"
repository = "https://github.com/mateodavi/ndev"
keywords = ["neural", "network", "genetic", "algorithm", "neuroevolution"]
license = "BSD-3-Clause"
authors = ["mateodavi"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.7"
rand_distr = "0.2"
rayon = "1.1"
uuid = { version = "0.7", features = ["v4"] }